# ForkerEngine

./: .gitignore  CMakeLists.txt  README.md
shaders/: coordinate.frag  coordinate.vert  object.frag  object.vert
src/: constant.h  program.cpp
src/engine/: camera.cpp  camera.h  forker_engine.cpp  forker_engine.h
src/engine/core/: camera.cpp  camera.h  cube.cpp  cube.h  cube_renderer.cpp  cube_renderer.h  directional_light.cpp  directional_light.h  light.cpp  light.h  object.cpp  object.h  point_light.cpp  point_light.h  renderer.cpp  renderer.h  resource_manager.cpp  shader.cpp  shader.h  texture.cpp  texture.h
src/engine/gui/: gui.cpp  gui.h
src/engine/resource/: resource_manager.h  shader.cpp  shader.h  texture.cpp
